<resources>
    <string name="app_name">Engineering Stuff</string>
    <string name="_1st_year">1st Year</string>
    <string name="_2nd_year">2nd Year</string>
    <string name="_3rd_year">3rd Year</string>
    <string name="_4th_year">4th Year</string>
    <string name="about_us">About US</string>
    <string name="feedbackAndContribute">Feedback / Contribute</string>
    <string name="cse">CSE</string>
    <string name="it">IT</string>
    <string name="ai">AI</string>
    <string name="ece">ECE</string>
    <string name="mee">MEE</string>
    <string name="che">CHE</string>
    <string name="isc">Programming in C and Unix</string>
    <string name="esc">Basic Electronics</string>
    <string name="workshop">Workshop Concept</string>
    <string name="ed">Engineering Drawing</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics1">Physics I</string>
    <string name="physics2">Physics II</string>
    <string name="maths1">Mathematics I</string>
    <string name="maths2">Mathematics II</string>
    <string name="hss">Communicative English</string>
    <string name="os">Operating System</string>
    <string name="dataStructure">Data Structure</string>
    <string name="javaOOPS">OOPs with JAVA</string>
    <string name="co">Computer Organisation</string>
    <string name="digital">Digital Electronics</string>
    <string name="analog">Analog Electronics</string>
    <string name="machine">Electrical Machine</string>
    <string name="network">Network Analysis And Synthesis </string>
    <string name="uhv">UHV</string>
    <string name="evs">EVS</string>
    <string name="economics">Economics</string>
    <string name="maths3">Mathematics III</string>
    <string name="discreteMaths">Discrete Mathematics</string>
    <string name="emft">EMFT</string>
    <string name="thermodynamics">Thermodynamics</string>
    <string name="mechanics">Mechanics</string>
    <string name="PythonOOPs">OOPs with Python</string>
    <string name="dataStructurePython">Data Structure Using Python</string>
    <string name="ProbabilityAndStatistics">Probability and Statistics</string>
    <string name="OOPs">Object Oriented Programming</string>
    <string name="softwareEngineering">Software Engineering</string>
    <string name="generalProficiency1">General Proficiency</string>
    <string name="md">Mechanical Design and Drawing</string>
    <string name="fluidMechanics">Fluid Mechanics and Rate Processes</string>
    <string name="kinematicsAndMechanism">Kinematics And Mechanism</string>
    <string name="solidMechanism">Solid Mechanism</string>
    <string name="materialScience">Material Science And Engineering</string>
    <string name="materialRemoval">Material Removal Manufacturing Processes</string>
    <string name="industrialManagement">Industrial Management</string>
    <string name="processCalculation">Process Calculation</string>
    <string name="chemistry2">Chemistry II</string>
    <string name="chemicalEngThermmo">Chemical Engineering Thermodynamics</string>
    <string name="heatTransfer">Heat Transfer</string>
    <string name="cheProcessIndustry">Chemical Process Industries</string>
    <string name="mechanicalOperation">Mechanical Operation</string>
    <string name="dbms">Data Base Management System</string>
    <string name="algorithm">Design and Analysis of Algorithm</string>
    <string name="micro">Microprocessor</string>
    <string name="computation">Theory Of Computation</string>
    <string name="compiler">Compiler Design</string>
    <string name="comNetworks">Computer Networks</string>
    <string name="proCommunication">Professional Communication</string>
    <string name="electronicCircuit">Electronic Circuit</string>
    <string name="signalAndSystem">Signal And System</string>
    <string name="instrument">Measurement and Instrument</string>
    <string name="EEM">Electrical Engineering Materials</string>
    <string name="acs">Automatic Control System</string>
    <string name="AnalogIC">Analog Integrated Circuit</string>
    <string name="CommunicationSystem">Communication System</string>
    <string name="antenna">Antenna and Microwave Eng.</string>
    <string name="dynamicsMachineVibration">Dynamics Of Machines And Vibrations</string>
    <string name="materialAdditive">Material Additive Manufacturing Process</string>
    <string name="ICEngine">IC Engine</string>
    <string name="energySystem">Energy System</string>
    <string name="designMachine">Design Of Machine Element</string>
    <string name="Refrigerator">Refrigerator And AC</string>
    <string name="massTransfer1">Mass Transfer I</string>
    <string name="UOL1">Unit Operation Laboratory</string>
    <string name="CRE1">Chemical Reaction Engineering I</string>
    <string name="numericalMethod">Numerical Method For chemical Engineers</string>
    <string name="commnicationPrac">Communication Practicum</string>
    <string name="massTransfer2">Mass Transfer II</string>
    <string name="InstrumentationProcess">Instrument And Process Control</string>
    <string name="CED1">Chemical Engineering Design I</string>
    <string name="UOL2">Unit Operation Laboratory II</string>
    <string name="dataScience">Introduction To Data Science</string>
    <string name="capstoneProject">Capstone Project</string>
    <string name="ml">Foundation Of Machine Learning</string>
    <string name="adbms">Advance Data Base Management System</string>
    <string name="generalProficiency2">General Proficiency II</string>
    <string name="itech">Internet Technology</string>
    <string name="generalProficiency3">General Proficiency III</string>
    <string name="powerElectronics">Power Electronics (Elective-I)</string>
    <string name="mathsElective3rdyear">Maths Elective</string>
    <string name="compGraphic">Computer Graphics</string>
    <string name="digitalCommunication">Digital Communication</string>
    <string name="dataCommunication">Data Communication</string>
    <string name="digitalSignal">Digital Signal Processing</string>
    <string name="wirelessAndMobile">Wireless And Mobile</string>
    <string name="opticalCommunication">Optical Communication</string>
    <string name="vlsi">VLSI Design and Technology</string>
    <string name="compManufacturing">Computer Aided Manufacturing</string>
    <string name="IMandProduction">Industrial Management And Production System</string>
    <string name="metrologyMeasurementControl">Metrology, Measurement And Control</string>
    <string name="gasDynamics">Gas Dynamics And Turbo Machinery</string>
    <string name="compDesign">Computer Aided Design</string>
    <string name="CED2">Chemical Engineering Design II</string>
    <string name="CRE2">Chemical Reaction Engineering II</string>
    <string name="processSimulation">Process Simulation Lab</string>
    <string name="transportPhenomena">Transport Phenomena</string>
    <string name="CREPCL">Chemical Reaction Engineering and Process Control Lab</string>
    <string name="compVision">Computer Vision</string>
    <string name="dl">Deep Learning</string>
    <string name="digitalImageProcess">Digital Image Processing</string>
    <string name="infoSystem">Information System</string>
    <string name="generalProficiency4">General Proficiency IV</string>
    <string name="generalProficiency5">General Proficiency V</string>
    <string name="escLab">Basic Electronics Practical</string>
    <string name="esclink">https://drive.google.com/file/d/1ffAhNEp0Qngl9BCcLM-Ult1TSE8xMlUh/view?usp=share_link</string>
    <string name="phy1Lab">Physics I Practical</string>
    <string name="physics1Link">https://drive.google.com/file/d/1FM-hpGIbtM1RAKFmbxXk79b_R65fHLWL/view?usp=share_link</string>
    <string name="phy2Lab">Physics II Practical</string>
    <string name="physics2Link">https://drive.google.com/file/d/1AakFswJ3nriUUTPHGJCAh8bh6O_8gday/view?usp=share_link</string>
    <string name="chemistryP">Chemistry Practical</string>
    <string name="chemistryPLink">https://drive.google.com/file/d/1T140G7RDk5bkunQ253O4QQbIq-XSKXvG/view?usp=share_link</string>
    <string name="workshopP">Workshop Practical</string>
    <string name="workshopLink">https://drive.google.com/file/d/1btjPXAS_nNm3vu8vTq6kV3sDLhCnqduS/view?usp=share_link</string>
    <string name="analogP">Analog Electronic Practical</string>
    <string name="analogPLink">https://drive.google.com/file/d/1AqGFTuPxxwahN88c6or88LOmDql15JkD/view?usp=share_link</string>
    <string name="digitalP">Digital Electronic Practical</string>
    <string name="digitalPlink">https://drive.google.com/file/d/1b_yl3wnJuy6P9OhJVVsEXq975QD63gZt/view?usp=share_link</string>
    <string name="analogICP">Analog IC Practical</string>
    <string name="analogICPLink">https://drive.google.com/file/d/1HOdZ0pfAXY4vVRQLfy19D4NYaRhLygd6/view?usp=share_link</string>
    <string name="analogCommunicationP">Analog Communication Practical</string>
    <string name="analogCommPLink">https://drive.google.com/file/d/1cQTXxFuNbjY1ZtkydOqOnVrw9_hXRCjH/view?usp=share_link</string>
    <string name="machineP">Electrical Machine Practical</string>
    <string name="machinePLink">https://drive.google.com/file/d/1fiv1qQxiCvyY0k6syiI12vI5YXoyyznx/view?usp=share_link</string>
    <string name="instrumentP">Instrument Practical</string>
    <string name="instrumentPlink">https://drive.google.com/file/d/1fspdjbgkFI5zjYyIldCPwbkZ0MYXt4ZC/view?usp=share_link</string>
    <string name="uploading">https://drive.google.com/file/d/1gTgZUjDfENH80Q4qUIC4vxzqfWlQDTcw/view?usp=share_link</string>
    <string name="basicElectronicsN">https://drive.google.com/file/d/1YC6HL-jbEnXB4N437q-HhyoOymuai4u-/view?usp=share_link</string>
    <string name="basicsOfCN">https://drive.google.com/file/d/1j-JXmDpdHKc7WR0WKQaR0jbzV_m3U8IG/view?usp=share_link</string>
    <string name="chemistryN">https://drive.google.com/file/d/11eBGPjd9S9nB6zqmvPo6LJ_ME7ogWSwC/view?usp=share_link</string>
    <string name="EDN">https://drive.google.com/file/d/1bTXds8T2vNnWrx9a8B_Qd0bAwogdfEV5/view?usp=share_link</string>
    <string name="maths1N">https://drive.google.com/file/d/1f5PoOurKZMCDU4ija_PUOdxUrpjIqQwy/view?usp=share_link</string>
    <string name="maths2N">https://drive.google.com/file/d/1DkJOA_J6WsI3kyBQCcYaEnXbZnAkyQO4/view?usp=share_link</string>
    <string name="physics1N">https://drive.google.com/file/d/1_HpxERiIb1uidkd8VvKo67UR3Gb6SIWv/view?usp=share_link</string>
    <string name="physics2N">https://drive.google.com/file/d/1EK427f0nX2nKWfGA63OWm4ao7ropM8Ie/view?usp=share_link</string>
    <string name="professionalCommunication">https://drive.google.com/file/d/1ItGKNG_H2kRcWMSh_2QBaIGKXKgSIbfW/view?usp=share_link</string>
    <string name="digitalNece">https://drive.google.com/file/d/138bPQa96mP1ZPuDUWwaS8Utg3EreArSm/view?usp=share_link</string>
    <string name="EMFTN">https://drive.google.com/file/d/1lmoSZ1oDi5-CZ-pp81jAFKKriMo7LRdV/view?usp=share_link</string>
    <string name="discreteN">https://drive.google.com/file/d/1K1mFEdPrgDJ5rr0VEMF1VKHhHmdRdzTG/view?usp=share_link</string>
    <string name="economicsN">https://drive.google.com/file/d/14OS_pXuLmVmoFlDL0a1Y3uHOqS5WPGZe/view?usp=share_link</string>
    <string name="machineNece">https://drive.google.com/file/d/1aqxJeSKpTFR6zFwSydESc5Fv424-dFPi/view?usp=share_link</string>
    <string name="thermoece">https://drive.google.com/file/d/1UgPorp1WU9xMDd9GNhYMvg9VmtrchsLj/view?usp=share_link</string>
    <string name="analogICNece">https://drive.google.com/file/d/1ePLhcQVVsfmMU_3NKVF4Nwq-ciDyxnXW/view?usp=share_link</string>
    <string name="antennaN">https://drive.google.com/file/d/1AQq40nuNHR-0FcwvKddX4s7JqNLTULbm/view?usp=share_link</string>
    <string name="acsN">https://drive.google.com/file/d/1BsDftJwgVVXRDtEDLbwi5ZbtSmH0mGu4/view?usp=share_link</string>
    <string name="communicationN">https://drive.google.com/file/d/1FPHT-pdyQNsaBLCx8HA39yHgW6gqw2qa/view?usp=share_link</string>
</resources>